--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -267,39 +267,32 @@
                                                                 <constraint firstAttribute="height" constant="225" id="U5C-Rb-8up"/>
                                                             </constraints>
                                                         </view>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNc-Xq-1uP">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nTm-f8-Vfg">
                                                             <rect key="frame" x="20" y="305" width="378" height="40"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Install" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rng-fE-l76">
-                                                                    <rect key="frame" x="163.66666666666666" y="8" width="51" height="24"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
                                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
-                                                                <constraint firstItem="rng-fE-l76" firstAttribute="centerY" secondItem="HNc-Xq-1uP" secondAttribute="centerY" id="afr-Lf-dhB"/>
-                                                                <constraint firstAttribute="height" constant="40" id="cvd-rq-wg5"/>
-                                                                <constraint firstItem="rng-fE-l76" firstAttribute="centerX" secondItem="HNc-Xq-1uP" secondAttribute="centerX" id="yJd-3y-9zo"/>
+                                                                <constraint firstAttribute="height" constant="40" id="Vgv-Md-WTn"/>
                                                             </constraints>
-                                                        </view>
+                                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <state key="normal" title="Button"/>
+                                                            <buttonConfiguration key="configuration" style="plain" title="Call to Action"/>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.61176470588235299" green="0.58039215686274503" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstItem="R8s-4U-I9Z" firstAttribute="leading" secondItem="nmN-Sv-YPP" secondAttribute="leading" constant="10" id="06h-oB-v4B"/>
                                                         <constraint firstItem="yA6-UL-K9f" firstAttribute="top" secondItem="8Eq-sQ-0Jw" secondAttribute="bottom" constant="7" id="71t-LC-pie"/>
-                                                        <constraint firstAttribute="trailing" secondItem="HNc-Xq-1uP" secondAttribute="trailing" constant="20" symbolic="YES" id="92w-Ee-Twg"/>
                                                         <constraint firstItem="yA6-UL-K9f" firstAttribute="leading" secondItem="8Eq-sQ-0Jw" secondAttribute="leading" id="BFk-Ot-7YT"/>
+                                                        <constraint firstItem="nTm-f8-Vfg" firstAttribute="leading" secondItem="nmN-Sv-YPP" secondAttribute="leading" constant="20" symbolic="YES" id="GEU-7e-TlK"/>
+                                                        <constraint firstAttribute="trailing" secondItem="nTm-f8-Vfg" secondAttribute="trailing" constant="20" symbolic="YES" id="HSd-9W-4Bz"/>
                                                         <constraint firstItem="8Eq-sQ-0Jw" firstAttribute="leading" secondItem="R8s-4U-I9Z" secondAttribute="leading" id="L61-ka-sMg"/>
                                                         <constraint firstItem="8Eq-sQ-0Jw" firstAttribute="top" secondItem="R8s-4U-I9Z" secondAttribute="bottom" constant="5" id="c02-B4-Uyy"/>
                                                         <constraint firstItem="R8s-4U-I9Z" firstAttribute="top" secondItem="nmN-Sv-YPP" secondAttribute="top" constant="10" id="ce6-OZ-CKn"/>
                                                         <constraint firstItem="yA6-UL-K9f" firstAttribute="trailing" secondItem="8Eq-sQ-0Jw" secondAttribute="trailing" id="gU6-lT-pvK"/>
                                                         <constraint firstItem="yA6-UL-K9f" firstAttribute="leading" secondItem="nmN-Sv-YPP" secondAttribute="leading" constant="10" id="iz8-0e-pBu"/>
                                                         <constraint firstAttribute="trailing" secondItem="yA6-UL-K9f" secondAttribute="trailing" constant="10" id="kUc-9X-YNy"/>
-                                                        <constraint firstItem="HNc-Xq-1uP" firstAttribute="top" secondItem="yA6-UL-K9f" secondAttribute="bottom" constant="10" id="qTV-cf-G1o"/>
-                                                        <constraint firstItem="HNc-Xq-1uP" firstAttribute="leading" secondItem="nmN-Sv-YPP" secondAttribute="leading" constant="20" symbolic="YES" id="rpD-2U-RQt"/>
-                                                        <constraint firstAttribute="bottom" secondItem="HNc-Xq-1uP" secondAttribute="bottom" constant="8" id="y6c-XY-u12"/>
+                                                        <constraint firstItem="nTm-f8-Vfg" firstAttribute="top" secondItem="yA6-UL-K9f" secondAttribute="bottom" constant="10" id="pt2-FL-1LX"/>
+                                                        <constraint firstAttribute="bottom" secondItem="nTm-f8-Vfg" secondAttribute="bottom" constant="8" id="zjZ-rB-wLm"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -315,7 +308,7 @@
                                         <connections>
                                             <outlet property="adDetailLabel" destination="8Eq-sQ-0Jw" id="hL2-XM-tGP"/>
                                             <outlet property="adTitleLabel" destination="R8s-4U-I9Z" id="ntJ-YJ-hq4"/>
-                                            <outlet property="callToActionView" destination="HNc-Xq-1uP" id="FMK-yx-pRW"/>
+                                            <outlet property="callToActionButton" destination="nTm-f8-Vfg" id="zti-ZE-Swg"/>
                                             <outlet property="mediaView" destination="yA6-UL-K9f" id="AhT-Oo-xUV"/>
                                             <outlet property="nativeAdView" destination="nmN-Sv-YPP" id="JUx-j8-VLI"/>
                                         </connections>
